dbus: tools: update to Bookworm
* Use actual Dockerhub tags instead of `-latest`.
* Use python3-dbus from Debian instead of PyPi, which has a broken
setup.py for the version of Python that ships with Debian Bookworm.

Notice that we don't use a venv here due to the package being downloaded
from the Debian feed.

Related-to: TOR-2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/dbus/tools/Dockerfile
+++ b/dbus/tools/Dockerfile
@@ -1,6 +1,6 @@
 ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm/v7
-ARG IMAGE_TAG=2-bullseye
+ARG IMAGE_TAG=3-bookworm
 ARG DOCKER_REGISTRY=torizon
 
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
