gpio: bash, c: update to Bookworm
* Use actual Dockerhub tags instead of `-latest`.

Related-to: TOR-2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/gpio/bash/.gitlab-ci.yml
+++ b/gpio/bash/.gitlab-ci.yml
@@ -37,10 +37,10 @@ docker-build-gpio-bash:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm32v7-sample-gpio-bash
     IMAGE_ARCH: linux/arm/v7
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-gpio-bash-arm64v8:
@@ -50,10 +50,10 @@ docker-build-gpio-bash-arm64v8:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm64v8-sample-gpio-bash
     IMAGE_ARCH: linux/arm64/v8
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-gpio-bash-multiarch:
