--- a/opencv/Dockerfile
+++ b/opencv/Dockerfile
@@ -1,7 +1,8 @@
 ARG BASE_NAME=wayland-base-vivante
 ARG IMAGE_ARCH=linux/arm64/v8
-ARG IMAGE_TAG=2
+ARG IMAGE_TAG=3
 ARG DOCKER_REGISTRY=torizon
+ARG DEBIAN_FRONTEND=noninteractive
 
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
@@ -9,12 +10,7 @@ WORKDIR /home/torizon
 
 #### Install GPU Drivers ####
 RUN apt-get -y update && apt-get install -y --no-install-recommends \
-    libgl-vivante1 \
-    libopencl-vivante1 \
-    libopencl-vivante1-dev \
-    libclc-vivante1 \
-    libgal-vivante1 \
-    libvsc-vivante1 \
+    imx-gpu-viv-wayland-dev \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 #### Install Python and other utilities ####
@@ -25,14 +21,14 @@ RUN apt-get -y update && apt-get install -y --no-install-recommends \
 #### Install OpenCV Dependencies ####
 RUN apt-get -y update && apt-get install -y --no-install-recommends \
     pkg-config libavcodec-dev libavformat-dev libswscale-dev \
-    libtbb2 libtbb-dev libjpeg-dev libpng-dev libdc1394-22-dev \
-    libdc1394-22-dev protobuf-compiler libgflags-dev libgoogle-glog-dev \
+    libtbbmalloc2 libtbb-dev libjpeg-dev libpng-dev libdc1394-25 \
+    libdc1394-dev protobuf-compiler libgflags-dev libgoogle-glog-dev \
     libblas-dev libhdf5-serial-dev liblmdb-dev libleveldb-dev liblapack-dev \
     libsnappy-dev libprotobuf-dev libopenblas-dev libboost-dev \
     libboost-all-dev libeigen3-dev libatlas-base-dev libne10-10 libne10-dev \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
-#### INSTALL OPENCV ####
+#### Install OpenCV ####
 RUN apt-get update && apt-get install -y --no-install-recommends python3-opencv \
     && rm -rf /var/lib/apt/lists/*
 
