tflite: tflite-basic: update to Bookworm
* Use actual Dockerhub tags instead of `-latest`.
* Build Python 3.9 from source as tensorflow is not compatible with
the python version that Bookworm ships.
* Change to wget instead of curl to not have both curl and wget in the
same image.

Note that we don't use `venv` here because PEP 668 doesn't apply to
Python 3.9.

Related-to: TOR-2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/tflite/tflite-basic/Dockerfile
+++ b/tflite/tflite-basic/Dockerfile
@@ -2,7 +2,7 @@ ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm64/v8
 # For arm32 use:
 # ARG IMAGE_ARCH=linux/arm/v7
-ARG IMAGE_TAG=2-bullseye
+ARG IMAGE_TAG=3-bookworm
 ARG PKG_ARCH=aarch64
 # For arm32v7 use: 
 # ARG PKG_ARCH=armv7l
@@ -13,32 +13,30 @@ WORKDIR /home/torizon
 
 ARG PKG_ARCH
 
-# Install utils, app dependencies and TensorFlow Lite with APT
-# https://www.tensorflow.org/lite/guide/python#install_tensorflow_lite_for_python
 RUN apt-get -y update && apt-get install -y --no-install-recommends \
-  curl unzip gnupg \
-  && echo "deb https://packages.cloud.google.com/apt coral-edgetpu-stable main" | \
-    tee /etc/apt/sources.list.d/coral-edgetpu.list \
-  && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
-  && apt-get -y update && apt-get install -y --no-install-recommends \
-    python3-tflite-runtime \
-    python3-pil \
-  && apt-get remove gnupg \
-  && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+  libssl-dev openssl libffi-dev wget build-essential zlib1g-dev unzip libjpeg-dev curl
 
-# Anternative: Install utils and app dependencies with APT, Tensorflow Lite with PIP
+# Install Python from source, as tflite doesn't support the default python version that ships with Bookworm
+WORKDIR /opt
+RUN wget https://www.python.org/ftp/python/3.9.0/Python-3.9.0.tgz \
+    && tar -xvf Python-3.9.0.tgz \
+    && cd Python-3.9.0 && ./configure --enable-optimizations --prefix=/usr/local && make && make install \
+    && ln -sf /usr/local/bin/python3.9 /usr/local/bin/python \
+    && ln -sf /usr/local/bin/pip3.0 /usr/local/bin/pip 
+
+# Install utils and app dependencies with APT, Tensorflow Lite with PIP
 # https://www.tensorflow.org/lite/guide/python#install_tensorflow_lite_for_python
-#RUN apt-get -y update && apt-get install -y \
-#  curl unzip \
-#  python3-numpy \
-#  python3-pil \
-#  python3-pip \
-#  && pip3 install --index-url https://google-coral.github.io/py-repo/ tflite_runtime \
-#  && apt-get clean && apt-get autoremove
+RUN /usr/local/bin/python -m pip install numpy Pillow \
+    && /usr/local/bin/python -m pip install --index-url https://google-coral.github.io/py-repo/ tflite_runtime \
+    && apt-get clean \
+    && apt-get autoremove
+
+WORKDIR /home/torizon
 
 # Download the model
-ENV MODEL_LINK https://storage.googleapis.com/download.tensorflow.org/models/tflite/mobilenet_v1_1.0_224_quant_and_labels.zip
-RUN curl -o model.zip $MODEL_LINK && unzip model.zip && rm -rf __MACOSX model.zip
+ENV MODEL_FILENAME mobilenet_v1_1.0_224_quant_and_labels.zip
+ENV MODEL_LINK https://storage.googleapis.com/download.tensorflow.org/models/tflite/$MODEL_FILENAME
+RUN wget $MODEL_LINK && mv $MODEL_FILENAME model.zip && unzip model.zip && rm -rf __MACOSX model.zip
 
 # Copy files
 COPY image.jpg .
