--- a/tflite/tflite-basic/.gitlab-ci.yml
+++ b/tflite/tflite-basic/.gitlab-ci.yml
@@ -37,11 +37,11 @@ docker-build-tflite:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm32v7-sample-tflite
     IMAGE_ARCH: linux/arm/v7
     PKG_ARCH: armv7l
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-tflite-arm64v8:
@@ -51,11 +51,11 @@ docker-build-tflite-arm64v8:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm64v8-sample-tflite
     IMAGE_ARCH: linux/arm64/v8
     PKG_ARCH: aarch64
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-tflite-multiarch:
