tflite-rtsp: update to Bookworm
* Use actual Dockerhub tags instead of `-latest`.
* The scripts used to build nn-imx, tim-vx and tensorflow downstream
are to be replaced with their respective Debian packages once available
in the Toradex feed.
* Update opencv dependencies to reflect that last version of the opencv
package available in the Toradex feed.

Related-to: TOR-2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/tflite/tflite-rtsp/.gitlab-ci.yml
+++ b/tflite/tflite-rtsp/.gitlab-ci.yml
@@ -36,11 +36,11 @@ docker-build-tflite-rtsp-arm64v8:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm64v8-sample-tflite-rtsp
     IMAGE_ARCH: linux/arm64/v8
     PKG_ARCH: aarch64
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-deploy-tflite-rtsp-arm64v8:
