--- a/tflite/tflite-rtsp/Dockerfile
+++ b/tflite/tflite-rtsp/Dockerfile
@@ -1,55 +1,34 @@
 ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm64/v8
-ARG IMAGE_TAG=2-bullseye
+ARG IMAGE_TAG=3-bookworm
 ARG DOCKER_REGISTRY=torizon
 
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG AS tflite-build
 
-## Build tools
+## Install Python
+RUN apt-get -y update && apt-get install -y \
+  python3 python3-dev python3-numpy python3-pybind11 \
+  python3-pip python3-setuptools python3-wheel \
+  && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
+## Install build tools
 RUN apt-get -y update && apt-get install -y \
     cmake build-essential gcc g++ git wget unzip patchelf \
-    autoconf automake libtool curl gfortran zlib1g
+    autoconf automake libtool curl gfortran
 
-RUN git config --global user.email "you@example.com" && \
-    git config --global user.name "Your Name"
+## Install dependencies
+RUN apt-get -y update && apt-get install -y \
+    zlib1g zlib1g-dev libssl-dev \
+    imx-gpu-viv-wayland-dev openssl libffi-dev libjpeg-dev
 
-## Prepare the build environment ##
-ENV CPATH="/build/usr/include/:${CPATH}"
-ENV LIBRARY_PATH="/build/usr/lib/:${LIBRARY_PATH}"
+WORKDIR /build
+COPY recipes /build
 
-## Install Python and TFLITE dependencies ##
-RUN apt-get -y update && apt-get install -y --no-install-recommends \
-  python3 python3-dev python3-setuptools \
-  python3-wheel python3-pip libopenblas-dev \
-  libjpeg-dev python3-pybind11 && \
-  apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
-
-## NumPy 1.22.3 requires Cython >= 0.29.24
-RUN wget https://snapshot.debian.org/archive/debian/20220612T214420Z/pool/main/c/cython/cython3_0.29.30-1_arm64.deb && apt-get install -y ./cython3_0.29.30-1_arm64.deb && rm -rf ./cython3_0.29.30-1_arm64.deb
-
-WORKDIR /home/
-COPY recipes /home/
-
-### Build and install remaining libraries
-###   This is necessary as the required libraries that enable the use of GPUs
-###   and the iMX8MP NPU for machine learning are not yet available as debian packages
-## Install imx-gpu-viv, including OpenVX 
-RUN ./imx-gpu-viv_6.4.3.p1.4-aarch64.sh
-## Install nn-imx
+### Install TensorFlow Lite
 RUN ./nn-imx_1.3.0.sh
-# Install Numpy
-RUN ./python3-numpy_1.22.3.sh
-# Workaround: After installing numpy whl, remove cpython*. More info: http://benno.id.au/blog/2013/01/15/python-determinism
-RUN pip3 --no-cache-dir install /home/numpy-*.whl && \
-  rm /usr/local/lib/python*/dist-packages/numpy/typing/tests/data/pass/__pycache__/literal.cpython*
-## Install tensorflow-protobuf
-RUN ./tensorflow-protobuf_3.9.2.sh
-## Install tim-vx
-RUN ./tim-vx_1.1.39.sh
-## Install tensorflow-lite
-RUN ./tensorflow-lite_2.8.0.sh
-## Install tensorflow-lite-vx-delegate
-RUN ./tensorflow-lite-vx-delegate_2.8.0.sh
+RUN ./tim-vx.sh
+RUN ./tensorflow-lite_2.9.1.sh
+RUN ./tflite-vx-delegate.sh
 
 ############################################################
 ############ Build Application Container ###################
@@ -59,34 +38,40 @@ FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG AS tflite-bas
 COPY --from=tflite-build /out /
 RUN ldconfig
 
+## Install Python
+RUN apt-get -y update && apt-get install -y \
+  python3 python3-dev python3-numpy python3-pybind11 \
+  python3-pip python3-setuptools python3-wheel python3-venv \
+  && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
+## Install TF Lite ##
+COPY --from=tflite-build /build /build
+RUN cp -r /build/* /
+RUN python3 -m venv /venv && /venv/bin/pip3 install --no-cache-dir /tflite_runtime-*.whl && rm -rf *.whl
+
+## Install runtime TF Lite dependencies ## 
+RUN apt-get -y update && apt-get install -y \
+    libovxlib
+
+## Install application dependencies
+RUN apt-get -y update && apt-get install -y \
+  wget unzip python3-pil imx-gpu-viv-wayland-dev \
+  && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
+## Install OpenCV
+RUN apt-get -y update && apt-get install -y --no-install-recommends  \
+    python3-opencv \
+    && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
+#### Install OpenCV Dependencies ####
 RUN apt-get -y update && apt-get install -y --no-install-recommends \
-  python3 python3-dev python3-setuptools \
-  cython3 libopenblas-dev python3-wheel python3-pip \
-  libjpeg-dev python3-pybind11 && \
-  apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
-
-# Workaround: After installing numpy whl, remove cpython*. More info: http://benno.id.au/blog/2013/01/15/python-determinism
-RUN pip3 --no-cache-dir install /home/numpy-*.whl && \
-  rm /usr/local/lib/python*/dist-packages/numpy/typing/tests/data/pass/__pycache__/literal.cpython*
-
-RUN pip3 --no-cache-dir install /home/tflite_runtime-*.whl
-
-RUN apt-get -y update && apt-get install -y --no-install-recommends python3-pil && \
-    apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
-
-### Install OpenCV Dependencies ###
-RUN apt-get -y update && apt-get install -y --no-install-recommends --fix-missing \
     pkg-config libavcodec-dev libavformat-dev libswscale-dev \
-    libtbb2 libtbb-dev libjpeg-dev libpng-dev libdc1394-22-dev \
-    libdc1394-22-dev protobuf-compiler libgflags-dev libgoogle-glog-dev \
+    libtbbmalloc2 libtbb-dev libjpeg-dev libpng-dev libdc1394-25 \
+    libdc1394-dev protobuf-compiler libgflags-dev libgoogle-glog-dev \
     libblas-dev libhdf5-serial-dev liblmdb-dev libleveldb-dev liblapack-dev \
     libsnappy-dev libprotobuf-dev libopenblas-dev libboost-dev \
-    libboost-all-dev libeigen3-dev libatlas-base-dev libne10-10 libne10-dev && \
-    apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
-
-## INSTALL OPENCV
-RUN apt-get update && apt-get install -y --no-install-recommends python3-opencv && \
-    apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+    libboost-all-dev libeigen3-dev libatlas-base-dev libne10-10 libne10-dev \
+    && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 ## Install GStreamer and rtsp libraries
 RUN apt-get -y update && apt-get install -y --no-install-recommends libgstreamer1.0-0 \
@@ -105,3 +90,4 @@ WORKDIR /home/object-detection
 # Run script
 ENTRYPOINT ["python3"]
 CMD ["object-detection.py"]
+
