ci: attempt to get sources more than once
When configuring a local runner over a VPN connection, sometimes the Git
fetch of the repository fails with the error 'Failed to connect to
gitlab.int.toradex.com port 443'.

Attempting more than once is an easy solution that does not impact the
regular workflows - when the fetch succeeds at first try.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,11 @@
 #   those samples are included from here
 # Shared scripts are in .gitlab-ci-scripts.yml and included in each sample
 
+variables:
+  # On local runner setup over VPN, fetch may fail with many jobs in parallel
+  # see https://docs.gitlab.com/ee/ci/runners/configure_runners.html#job-stages-attempts
+  GET_SOURCES_ATTEMPTS: 5
+
 # Only run branch pipelines
 include:
   - template: 'Workflows/Branch-Pipelines.gitlab-ci.yml'
