--- a/nodejs/.gitlab-ci.yml
+++ b/nodejs/.gitlab-ci.yml
@@ -15,6 +15,11 @@ include:
   - /.gitlab-ci-scripts.yml
 
 # Jobs
+
+default:
+  # retry failed jobs, since Docker is not very stable when running many jobs in parallel
+  retry: 2
+
 dockerfile-lint-nodejs:
   extends: .dockerfile-lint
   stage: lint
