--- a/adc/.gitlab-ci.yml
+++ b/adc/.gitlab-ci.yml
@@ -16,6 +16,10 @@ include:
 
 # Jobs
 
+default:
+  # retry failed jobs, since Docker is not very stable when running many jobs in parallel
+  retry: 2
+
 dockerfile-lint-adc:
   extends: .dockerfile-lint
   stage: lint
