--- a/debian-container/.gitlab-ci.yml
+++ b/debian-container/.gitlab-ci.yml
@@ -14,6 +14,11 @@ variables:
   APP_NAME: "portainer"
 
 # Jobs
+
+default:
+  # retry failed jobs, since Docker is not very stable when running many jobs in parallel
+  retry: 2
+
 push-nogpu-arm32v7:
   extends: .tcb-push-to-platform-services
   before_script:
