--- a/sht31/flaskapp/.gitlab-ci.yml
+++ b/sht31/flaskapp/.gitlab-ci.yml
@@ -14,6 +14,10 @@ include:
 
 # Jobs
 
+default:
+  # retry failed jobs, since Docker is not very stable when running many jobs in parallel
+  retry: 2
+
 dockerfile-lint-uart-sht31-flask-app:
   extends: .dockerfile-lint
   stage: lint
