Revert "ci: add a timeout to docker push"
This reverts commit 1df042768432892877a7082091e709e441accad0.

1df0427 was introduced to allow building in local runners over VPN for
testing purposes, so we could avoid overloading the main runners. The
problem is it introduces complexity and a lot of unnecessary code for
the common case. Discussing this situation, we decided to revert this
change to simplify the job script, thus reducing the surface for bugs to
appear.

Related-to: TOR-3076

--- a/.gitlab-ci-scripts.yml
+++ b/.gitlab-ci-scripts.yml
@@ -41,7 +41,6 @@ variables:
   # Use overlayfs driver for better performance
   DOCKER_TLS_CERTDIR: ""
   DOCKER_DRIVER: overlay2
-  DOCKER_PUSH_TIMEOUT: 1800
   IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   GITLAB_DOCKERREGISTRY_SUFFIX: ${CI_COMMIT_REF_SLUG}-${CI_PIPELINE_ID}
   GITLAB_DOCKERREGISTRY_SUFFIX_LATEST: ${CI_COMMIT_REF_SLUG}-latest
@@ -141,8 +140,8 @@ variables:
       if [ "$status" -ne 0 ]; then
         exit "$status"
       fi
-    - for i in 1 2 3 4 5; do timeout ${DOCKER_PUSH_TIMEOUT} docker push ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX} && echo "docker push success, attempt $i" && break; done
-    - for i in 1 2 3 4 5; do timeout ${DOCKER_PUSH_TIMEOUT} docker push ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX_LATEST} && echo "docker push success, attempt $i" && break; done
+    - docker push ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX}
+    - docker push ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX_LATEST}
 
 .do_docker_experimental: &do_docker_experimental
   # Enable experimental features in Docker client (experimental feature are needed for manifest)
