--- a/bluetooth/c/Dockerfile
+++ b/bluetooth/c/Dockerfile
@@ -22,8 +22,14 @@ ENV IMAGE_ARCH ${IMAGE_ARCH}
 # __deps__
 RUN apt-get -q -y update && \
     apt-get -q -y install \
+    bluez \
+    libc6-dev \
+    libbluetooth-dev \
 # DOES NOT REMOVE THIS LABEL: this is used for VS Code automation
     # __torizon_packages_dev_start__
+	bluez:arm64 \
+	libc6-dev:arm64 \
+	libbluetooth-dev:arm64 \
     # __torizon_packages_dev_end__
 # DOES NOT REMOVE THIS LABEL: this is used for VS Code automation
     && \
@@ -55,6 +61,9 @@ ENV APP_EXECUTABLE ${APP_EXECUTABLE}
 RUN apt-get -y update && apt-get install -y --no-install-recommends \
 # DOES NOT REMOVE THIS LABEL: this is used for VS Code automation
     # __torizon_packages_prod_start__
+	bluez:arm64 \
+	libc6-dev:arm64 \
+	libbluetooth-dev:arm64 \
     # __torizon_packages_prod_end__
 # DOES NOT REMOVE THIS LABEL: this is used for VS Code automation
 	&& apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
