--- a/bluetooth/c/Dockerfile.debug
+++ b/bluetooth/c/Dockerfile.debug
@@ -63,6 +63,9 @@ RUN apt-get -q -y update && \
     apt-get -q -y install \
 # DOES NOT REMOVE THIS LABEL: this is used for VS Code automation
     # __torizon_packages_dev_start__
+	bluez:arm64 \
+	libc6-dev:arm64 \
+	libbluetooth-dev:arm64 \
     # __torizon_packages_dev_end__
 # DOES NOT REMOVE THIS LABEL: this is used for VS Code automation
     && \
