--- a/adc/C/adcC/.vscode/tasks.json
+++ b/adc/C/adcC/.vscode/tasks.json
@@ -138,7 +138,7 @@
                 "cross-toolchain-arm64-adcc",
                 "make",
                 "ARCH=aarch64",
-                "CC=aarch64-linux-gnu-g++",
+                "CC=aarch64-linux-gnu-gcc",
                 "debug"
             ],
             "problemMatcher": [
@@ -209,7 +209,7 @@
                 "cross-toolchain-arm-adcc",
                 "make",
                 "ARCH=armhf",
-                "CC=arm-linux-gnueabihf-g++",
+                "CC=arm-linux-gnueabihf-gcc",
                 "debug"
             ],
             "problemMatcher": [
@@ -280,7 +280,7 @@
                 "cross-toolchain-amd64-adcc",
                 "make",
                 "ARCH=amd64",
-                "CC=x86_64-linux-gnu-g++",
+                "CC=x86_64-linux-gnu-gcc",
                 "debug"
             ],
             "problemMatcher": [
@@ -351,7 +351,7 @@
                 "cross-toolchain-riscv64-adcc",
                 "make",
                 "ARCH=riscv64",
-                "CC=riscv64-linux-gnu-g++",
+                "CC=riscv64-linux-gnu-gcc",
                 "debug"
             ],
             "problemMatcher": [
