--- a/adc/C/adcC/docker-compose.yml
+++ b/adc/C/adcC/docker-compose.yml
@@ -7,9 +7,13 @@ services:
     image: ${LOCAL_REGISTRY}:5002/adcc-debug:${TAG}
     ports:
       - 2230:2230
+    volumes:
+      - /sys/bus/iio/devices:/sys/bus/iio/devices
 
   adcc:
     build:
       context: .
       dockerfile: Dockerfile
     image: ${DOCKER_LOGIN}/adcc:${TAG}
+    volumes:
+      - /sys/bus/iio/devices:/sys/bus/iio/devices
